resources/cilium/hubble-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-route
  namespace: kube-system
spec:
  parentRefs:
  - name: global-gateway
    namespace: global-gateway
    sectionName: hubble-ui-http-gw
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
